# apps/api/src/lib/supabase.ts
@@ -2,6 +2,7 @@ import { createClient } from "@supabase/supabase-js";
 
 const supabaseUrl = process.env.NEXT_PUBLIC_SUPABASE_URL;
 const supabaseServiceRoleKey = process.env.SUPABASE_SERVICE_ROLE_KEY;
+const supabasePublishableKey = process.env.NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY;
 
 export function getSupabaseAdminClient() {
   if (!supabaseUrl || !supabaseServiceRoleKey) {
@@ -9,6 +10,18 @@ export function getSupabaseAdminClient() {
   }
 
   return createClient(supabaseUrl, supabaseServiceRoleKey, {
+    auth: {
+      persistSession: false,
+      autoRefreshToken: false
+    }
+  });
+}
+
+export function getSupabasePublicClient() {
+  if (!supabaseUrl || !supabasePublishableKey) {
+    return null;
+  }
+  return createClient(supabaseUrl, supabasePublishableKey, {
     auth: {
       persistSession: false,
       autoRefreshToken: false
